# Kugat

./: CMakeLists.txt  README.md  UpdateBuild.sh
Assets/: gamestats.xml  resources.xml
Enlivengine/Enlivengine/Enlivengine/Application/: ImGuiToolManager.cpp  Window.cpp  Window.hpp
Enlivengine/Enlivengine/Enlivengine/Graphics/: View.cpp  View.hpp
Enlivengine/Enlivengine/Enlivengine/System/: Config.hpp  String.cpp
Kugat-Client/: Button.cpp  Button.hpp  CMakeLists.txt  ClientSocket.hpp  GameSingleton.cpp  GameSingleton.hpp  GameState.cpp  GameState.hpp  Widget.cpp  Widget.hpp  main.cpp
Kugat-Common/: CMakeLists.txt  Common.hpp  Endpoint.cpp  Endpoint.hpp  GameData.cpp  GameData.hpp
Kugat-Server/: CMakeLists.txt  Server.cpp  Server.hpp  ServerSocket.hpp
